# neoscene

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
config/: llm_config.yaml  scene_spec.schema.json
docs/: README.md  ROADMAP.md  adding-assets.md  architecture.html  architecture.md  asset-manifest-spec.md  scene-spec.md
examples/: curl_generate_scene.sh  nature_demo.json  nature_demo.xml  orchard_scene.json  warehouse_scene.json
neoscene/: __init__.py  mjmodel.xml
neoscene/app/: api.py  main.py
neoscene/app/static/: app.js  index.html  styles.css
neoscene/assets/environments/desert/: manifest.json
neoscene/assets/environments/mountain/: manifest.json
neoscene/assets/environments/orchard/: manifest.json
neoscene/assets/environments/terrain/: manifest.json
neoscene/backends/: __init__.py  mujoco_runner.py  session_manager.py  task_runner.py
neoscene/core/: __init__.py  asset_catalog.py  asset_manifest.py  errors.py  llm_client.py  logging_config.py  row_navigator.py  scene_agent.py  scene_schema.py  scene_tools.py
neoscene/exporters/: __init__.py  mjcf_exporter.py
new inventory/: bushes.rar  cow.rar
new inventory/extracted/forklift/: forklift_2610x2264x986_minimum_height_green.stp
new inventory/extracted/pallet/: pallet_1200x800.stp
tests/: __init__.py  test_api.py  test_asset_catalog.py  test_asset_manifest.py  test_chat_api.py  test_errors.py  test_llm_client.py  test_mjcf_exporter.py  test_mujoco_runner.py  test_scene_agent.py  test_scene_schema.py  test_scene_tools.py
(+56 files in other folders)
